--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
   </header>
    
-    <div class=" container py-5 my-5 text-center">
+    <div class=" container py-5 my-5 text-center mb-md-0">
 
       <img class="d-block mx-auto mb-4 img-fluid big-image" src="./assets/home02.jpg" alt="home02" width="100%">
 
@@ -41,7 +41,7 @@
     </div>
 
 
-      <div class="container px-4 amenities" id="featured-3">
+      <div class="container px-4 amenities mt-0" id="featured-3">
         <h2 class="pb-2 border-bottom">Rooms and Amenities</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="feature col">
@@ -208,31 +208,28 @@
           <div class="col">
             <img src="./assets/Arcade2.jpg" class="img-thumbnail img-fluid" alt="Thumbnail 13" data-target="#carouselExampleIndicators" data-slide-to="12">
           </div>
-
-
-
         </div>
       </div>
   
-    <div class="container">
-    <div class="px-2 py-2 my-5 text-center" id="section2">
-      
-      <h2> Pricing </h2>
-      <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4 price cinzel-decorative-bold" >
+    <div class="container mt-0">
+      <div class="px-2 py-2 my-5 text-center" id="section2">
+        <h2> Pricing </h2>
+        <div class="col-lg-6 mx-auto">
+        <h3 class="lead mb-4 price cinzel-decorative-bold" >
           ✅Our rate is ₱28,000 + ₱3,000(refundable) security deposit per night. 
           <br>✅We require 50% down payment to secure the slot.<br>
           ✅Strictly no pencil booking.<br>
           ✅No downpayment means No reservation.<br>
           ✅Down payments are not refundable. <br>
-          ✅20 person standard, additional 350 per head(30 person max)</p>
+          ✅20 person standard, additional 350 per head(30 person max)</h3>
+
+          <h5>Note: Only Blanket and Pillow are included, Please bring your own Towel,Toiletries and Tablewares🍽️</h5>
+        </div>
       </div>
-    </div>
-    </div>
+   </div>
 
 
     <footer class="text-center">
-    
       <div class="row" id="section1">
         <div class="col-md-4 cinzel-decorative-black">
           <h5>About Us</h5>
