--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
     <ul class="nav nav-pills">
       <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
       <li class="nav-item"><a href="#section1" class="nav-link">About</a></li>
-      <li class="nav-item"><a href="#section2" class="nav-link">Pricing</a></li>
+      <li class="nav-item"><a href="#section1" class="nav-link">Pricing</a></li>
     </ul>
   </header>
    
-    <div class=" container py-5 my-5 text-center mb-md-0">
 
       <img class="d-block mx-auto mb-4 img-fluid big-image" src="./assets/home02.jpg" alt="home02" width="100%">
-
+      <div class=" container py-5 my-5 text-center mb-md-0">
       <h2 class="display-5 fw-bold text-body-emphasis cormorant-garamond-regular"> Welcome! </h2>
       
       <div class="col-lg-6 mx-auto">
@@ -223,7 +222,7 @@
           ✅Down payments are not refundable. <br>
           ✅20 person standard, additional 350 per head(30 person max)</h3>
 
-          <h5>Note: Only Blanket and Pillow are included, Please bring your own Towel,Toiletries and Tablewares🍽️</h5>
+          <h5>Note: Only blankets and pillows are included. Please bring your own towels,toiletries and tableware🍽️</h5>
         </div>
       </div>
    </div>
