--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
 
       <div class="row mt-4 container cinzel-decorative-black text-center">
         <button class="btn btn-lg btn-facebook align-items-center">
-          <a href="https://www.facebook.com/profile.php?id=61558105389864" class="btn btn-primary btn-lg">For question and inquiries Message us on Facebook</a>
+          <p> For any question and inquiries </p>
+          <a href="https://www.facebook.com/profile.php?id=61558105389864" class="btn btn-primary btn-lg">Message us on Facebook</a>
         </button>
       </div>
     </footer>  
