--- a/index.html
+++ b/index.html
@@ -238,7 +238,13 @@
         <div class="col-md-4 cinzel-decorative-black">
           <h5>Address</h5>
           <p>🏠 PH1 BLK 1A LOT 10, Trinidad Valley, Montevista Village, Tagaytay </p>
-          <p> </p>
+          <div class="row mt-4 container cinzel-decorative-black text-center">
+            <button class="btn btn-lg btn-facebook align-items-center">
+              <p> For any question and inquiries </p>
+              <a href="https://www.facebook.com/profile.php?id=61558105389864" class="btn btn-primary btn-sm">Message us on Facebook</a>
+            </button>
+          </div>
+          
         </div>
         <div class="col-md-4 cinzel-decorative-black">
           <h5>Contact Number</h5>
@@ -247,12 +253,7 @@
         </div>
       </div>
 
-      <div class="row mt-4 container cinzel-decorative-black text-center">
-        <button class="btn btn-lg btn-facebook align-items-center">
-          <p> For any question and inquiries </p>
-          <a href="https://www.facebook.com/profile.php?id=61558105389864" class="btn btn-primary btn-lg">Message us on Facebook</a>
-        </button>
-      </div>
+     
     </footer>  
   </div> 
 
