--- a/index.html
+++ b/index.html
@@ -221,7 +221,6 @@
           ✅No downpayment means No reservation.<br>
           ✅Down payments are not refundable. <br>
           ✅20 person standard, additional 350 per head(30 person max)</h3>
-
           <h5>Note: Only blankets and pillows are included. Please bring your own towels,toiletries and tableware🍽️</h5>
         </div>
       </div>
@@ -233,12 +232,13 @@
         <div class="col-md-4 cinzel-decorative-black">
           <h5>About Us</h5>
           <p>La Vie Est Belle</p>
-         
         </div>
+
         <div class="col-md-4 cinzel-decorative-black">
           <h5>Address</h5>
           <p>🏠 PH1 BLK 1A LOT 10, Trinidad Valley, Montevista Village, Tagaytay </p>
         </div>
+
         <div class="col-md-4 cinzel-decorative-black">
           <h5>Contact Number</h5>
           <p>📞 +63 9209506958</p>
@@ -247,8 +247,8 @@
       </div>
       
       <div class="row mt-4 container cinzel-decorative-black text-center">
-        <button class="btn btn-lg btn-facebook align-items-center">
-          <p> For any question and inquiries </p>
+        <p> For any question and inquiries </p>
+        <button class="btn btn-sm btn-facebook align-items-center">
           <a href="https://www.facebook.com/profile.php?id=61558105389864" class="btn btn-primary btn-sm">Message us on Facebook</a>
         </button>
       </div>
