--- a/index.html
+++ b/index.html
@@ -220,14 +220,18 @@
           ✅Strictly no pencil booking.<br>
           ✅No downpayment means No reservation.<br>
           ✅Down payments are not refundable. <br>
-          ✅20 person standard, additional 350 per head(30 person max)</h3>
-          <h5>Note: Only blankets and pillows are included. Please bring your own towels,toiletries and tableware🍽️</h5>
+          ✅20 person standard, additional 350 per head(30 person max) <br>
+        </h3>
         </div>
+        <br>
+          <h2>For any questions or inquiries message us on <a href="https://www.facebook.com/profile.php?id=61558105389864" class="btn btn-primary btn-lg "> Facebook</a></h2>
+        </button>
       </div>
    </div>
+  </div> 
 
 
-    <footer class="text-center">
+    <footer class="text-center container">
       <div class="row" id="section1">
         <div class="col-md-4 cinzel-decorative-black">
           <h5>About Us</h5>
@@ -244,19 +248,11 @@
           <p>📞 +63 9209506958</p>
           <p>📞 +63 9284835233</p>
         </div>
-      </div>
-      
-      <div class="row mt-4 container cinzel-decorative-black text-center">
-        <p> For any question and inquiries </p>
-        <button class="btn btn-sm btn-facebook align-items-center">
-          <a href="https://www.facebook.com/profile.php?id=61558105389864" class="btn btn-primary btn-sm">Message us on Facebook</a>
-        </button>
-      </div>
-     
+      </div>   
     </footer>  
-  </div> 
+  
 
-  <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top cinzel-decorative-black ">
+  <div class="d-flex flex-column flex-sm-row justify-content-between py-2 my-1 border-top cinzel-decorative-black">
     <p>© 2024 La Vie Est Belle. All rights reserved.</p>
     <ul class="list-unstyled d-flex">
       <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
